body now has a scroll for default to stop elements from shifting as the scroll bar is introduced

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body{
   background-image: url('https://images.unsplash.com/photo-1501630834273-4b5604d2ee31?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80');
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-y: scroll;
 }
 
 .App{
